@@ -1,61 +1,68 @@
 package com.crisado.delivery.service;
 
-import static java.util.stream.Collectors.toList;
+import com.crisado.delivery.dto.DeliveryOrderSummariesDtoRequest;
+import com.crisado.delivery.dto.OrderDeliveredDtoRequest;
 
-import java.time.ZonedDateTime;
 import java.util.List;
 
-import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import com.crisado.delivery.dto.OrderSummaryDto;
 import com.crisado.delivery.dto.RiderDto;
-import com.crisado.delivery.exception.StateException;
+import com.crisado.delivery.exception.OrderDeliveryException;
+import com.crisado.delivery.exception.OrderNotFoundException;
 import com.crisado.delivery.model.OrderDelivery;
 import com.crisado.delivery.repository.OrderDeliveryRepository;
 import com.crisado.delivery.repository.OrderRepository;
 import com.crisado.delivery.repository.RiderRepository;
 
 import jakarta.transaction.Transactional;
+import static java.util.stream.Collectors.toList;
 import lombok.AllArgsConstructor;
 
 @Service
-@Transactional
 @AllArgsConstructor
 public class OrderDeliveryService {
 
+    private final Services services;
     private final OrderRepository orderRepository;
     private final OrderDeliveryRepository deliveryRepository;
     private final RiderRepository riderRepository;
-    private final ModelMapper mapper;
 
     /**
      * Retrieves all orders for a specific delivery date and rider ID. Also
      * includes any orders that do not have a rider assigned.
      *
-     * @param date The delivery date to filter by.
-     * @param riderId The ID of the rider to filter by.
+     * @param orderSumariesRequest the request object containing the necessary parameters
      *
-     * @return A list of orders.
+     * @return a list of order summaries as objects.
      */
-    public List<OrderSummaryDto> getOrders(ZonedDateTime date, int riderId) {
-        ZonedDateTime to = date.plusDays(1);
-        return orderRepository.findAllByDeliveryDateAndRiderIdOrNull(date, to, riderId)
+    public List<OrderSummaryDto> getOrderSummaries(DeliveryOrderSummariesDtoRequest orderSumariesRequest) {
+        services.validate("Delivery Order Summary Request", orderSumariesRequest);
+        var from = orderSumariesRequest.getDate();
+        var to = from.plusDays(1);
+        var riderId = orderSumariesRequest.getRiderId();
+
+        return orderRepository.findAllByDeliveryDateBetweenAndOptionalRiderId(from, to, riderId)
                 .stream()
-                .map(order -> mapper.map(order, OrderSummaryDto.class))
-                .collect(toList());
+                .map(order -> services.map(order, OrderSummaryDto.class))
+                .toList();
     }
 
     /**
      * Updates the delivery status of an order by marking it as delivered or
      * undelivered.
      *
-     * @param orderId The ID of the order to update.
-     * @param delivered The delivery status to set for the order.
+     * @param orderDeliveredRequest the request object containing the necessary parameters
      */
-    public void setOrderDelivered(long orderId, boolean delivered) {
+    @Transactional
+    public void setOrderDelivered(OrderDeliveredDtoRequest orderDeliveredRequest) {
+        services.validate("Order Delivered Request", orderDeliveredRequest);
+        var orderId = orderDeliveredRequest.getOrderId();
+        var delivered = orderDeliveredRequest.isDelivered();
+
         OrderDelivery delivery = orderRepository.findById(orderId)
-                .orElseThrow(() -> new StateException("Order not found"))
+                .orElseThrow(() -> new OrderDeliveryException(new OrderNotFoundException(orderId)))
                 .getDelivery();
         delivery.setDelivered(delivered);
         deliveryRepository.save(delivery);
@@ -67,9 +74,10 @@ public class OrderDeliveryService {
      * @return A list of riders.
      */
     public List<RiderDto> getRiders() {
-        return riderRepository.findAll().stream()
-                .map(rider -> mapper.map(rider, RiderDto.class))
-                .collect(toList());
+        return riderRepository.findAll()
+                .stream()
+                .map(rider -> services.map(rider, RiderDto.class))
+                .toList();
     }
 
 }
